Update user-service API documentation
